fixed overflows

--- a/equatora/src/pages/Home.css
+++ b/equatora/src/pages/Home.css
@@ -1,10 +1,10 @@
 #home-body {
     background-color: white;
     width: 100%;
-    height: 100%;
-    box-sizing: border-box;
+    height: 100vh;
     margin: 0;
     padding: 0;
+    min-height: 100vh;
 }
 
 #navbar {
@@ -100,7 +100,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: calc(100vh - 140px);
+    height: calc(100vh-140px);
 }
 
 #hero-left {
@@ -142,7 +142,7 @@
     justify-content: space-between;
     align-items: flex-end;
     width: 637px;
-    height: 100px;
+    height: 110px;
 }
 
 .feature {
